parte2completa/ParLinguaggio.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from ParLinguaggio.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	Ident -> L_Ident                                   (1)
	Char -> L_charac                                   (2)
	Double -> L_doubl                                  (3)
	Integer -> L_integ                                 (4)
	String -> L_quoted                                 (5)
	Program -> ListTopDecl                             (6)
	TopDecl -> 'var' Ident ':' Type ';'                (7)
	TopDecl -> 'var' Ident ':' Type '=' Exp ';'        (8)
	TopDecl -> 'proc' Ident '(' ListParam ')' ':' Type Block   (9)
	ListTopDecl ->                                     (10)
	ListTopDecl -> TopDecl ListTopDecl                 (11)
	Param -> Intent Ident ':' Type                     (12)
	ListParam ->                                       (13)
	ListParam -> Param                                 (14)
	ListParam -> Param ',' ListParam                   (15)
	Intent ->                                          (16)
	Intent -> 'ref'                                    (17)
	Type -> 'int'                                      (18)
	Type -> 'bool'                                     (19)
	Type -> 'real'                                     (20)
	Type -> 'char'                                     (21)
	Type -> 'string'                                   (22)
	Type -> 'void'                                     (23)
	Type -> '[' Integer '..' Integer ']' Type          (24)
	Type -> 'c_ptr' '(' Type ')'                       (25)
	Block -> '{' ListStmt '}'                          (26)
	ListStmt ->                                        (27)
	ListStmt -> Stmt ListStmt                          (28)
	Stmt -> Block                                      (29)
	Stmt -> Exp '=' Exp ';'                            (30)
	Stmt -> Ident '(' ListExp ')' ';'                  (31)
	Stmt -> 'return' Exp ';'                           (32)
	Stmt -> 'return' ';'                               (33)
	Stmt -> TopDecl                                    (34)
	Stmt -> 'if' Exp Block                             (35)
	Stmt -> 'if' Exp Block 'else' Block                (36)
	Stmt -> 'while' Exp Block                          (37)
	Stmt -> 'do' Block 'while' Exp ';'                 (38)
	Stmt -> 'for' Ident 'in' Exp '..' Exp Block        (39)
	Stmt -> 'break' ';'                                (40)
	Stmt -> 'continue' ';'                             (41)
	Stmt -> Exp AssignOp Exp ';'                       (42)
	ListExp ->                                         (43)
	ListExp -> Exp                                     (44)
	ListExp -> Exp ',' ListExp                         (45)
	AssignOp -> '+='                                   (46)
	AssignOp -> '-='                                   (47)
	AssignOp -> '*='                                   (48)
	Exp -> 'if' Exp 'then' Exp 'else' Exp              (49)
	Exp -> Exp1                                        (50)
	Exp1 -> Exp1 '||' Exp2                             (51)
	Exp1 -> Exp2                                       (52)
	Exp2 -> Exp2 '&&' Exp3                             (53)
	Exp2 -> Exp3                                       (54)
	Exp3 -> Exp4 '==' Exp4                             (55)
	Exp3 -> Exp4 '!=' Exp4                             (56)
	Exp3 -> Exp4 '<' Exp4                              (57)
	Exp3 -> Exp4 '<=' Exp4                             (58)
	Exp3 -> Exp4 '>' Exp4                              (59)
	Exp3 -> Exp4 '>=' Exp4                             (60)
	Exp3 -> Exp4                                       (61)
	Exp4 -> Exp4 '+' Exp5                              (62)
	Exp4 -> Exp4 '-' Exp5                              (63)
	Exp4 -> Exp5                                       (64)
	Exp5 -> Exp5 '*' Exp6                              (65)
	Exp5 -> Exp5 '/' Exp6                              (66)
	Exp5 -> Exp6                                       (67)
	Exp6 -> '-' Exp6                                   (68)
	Exp6 -> '!' Exp6                                   (69)
	Exp6 -> '*' Exp6                                   (70)
	Exp6 -> 'c_ptrTo' '(' Exp ')'                      (71)
	Exp6 -> Exp7                                       (72)
	Exp7 -> Exp7 '[' Exp ']'                           (73)
	Exp7 -> Ident '(' ListExp ')'                      (74)
	Exp7 -> Exp8                                       (75)
	Exp8 -> Ident                                      (76)
	Exp8 -> Integer                                    (77)
	Exp8 -> Double                                     (78)
	Exp8 -> Char                                       (79)
	Exp8 -> String                                     (80)
	Exp8 -> 'true'                                     (81)
	Exp8 -> 'false'                                    (82)
	Exp8 -> '[' ListExp ']'                            (83)
	Exp8 -> '(' Exp ')'                                (84)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'*='           { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'+='           { PT _ (TS _ 9) }
	','            { PT _ (TS _ 10) }
	'-'            { PT _ (TS _ 11) }
	'-='           { PT _ (TS _ 12) }
	'..'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<='           { PT _ (TS _ 18) }
	'='            { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'>'            { PT _ (TS _ 21) }
	'>='           { PT _ (TS _ 22) }
	'['            { PT _ (TS _ 23) }
	']'            { PT _ (TS _ 24) }
	'bool'         { PT _ (TS _ 25) }
	'break'        { PT _ (TS _ 26) }
	'c_ptr'        { PT _ (TS _ 27) }
	'c_ptrTo'      { PT _ (TS _ 28) }
	'char'         { PT _ (TS _ 29) }
	'continue'     { PT _ (TS _ 30) }
	'do'           { PT _ (TS _ 31) }
	'else'         { PT _ (TS _ 32) }
	'false'        { PT _ (TS _ 33) }
	'for'          { PT _ (TS _ 34) }
	'if'           { PT _ (TS _ 35) }
	'in'           { PT _ (TS _ 36) }
	'int'          { PT _ (TS _ 37) }
	'proc'         { PT _ (TS _ 38) }
	'real'         { PT _ (TS _ 39) }
	'ref'          { PT _ (TS _ 40) }
	'return'       { PT _ (TS _ 41) }
	'string'       { PT _ (TS _ 42) }
	'then'         { PT _ (TS _ 43) }
	'true'         { PT _ (TS _ 44) }
	'var'          { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_Ident        { PT _ (TV _) }
	L_charac       { PT _ (TC _) }
	L_doubl        { PT _ (TD _) }
	L_integ        { PT _ (TI _) }
	L_quoted       { PT _ (TL _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	Ident           rule  1
	Char            rule  2
	Double          rule  3
	Integer         rule  4
	String          rule  5
	Program         rule  6
	TopDecl         rules 7, 8, 9
	ListTopDecl     rules 10, 11
	Param           rule  12
	ListParam       rules 13, 14, 15
	Intent          rules 16, 17
	Type            rules 18, 19, 20, 21, 22, 23, 24, 25
	Block           rule  26
	ListStmt        rules 27, 28
	Stmt            rules 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42
	ListExp         rules 43, 44, 45
	AssignOp        rules 46, 47, 48
	Exp             rules 49, 50
	Exp1            rules 51, 52
	Exp2            rules 53, 54
	Exp3            rules 55, 56, 57, 58, 59, 60, 61
	Exp4            rules 62, 63, 64
	Exp5            rules 65, 66, 67
	Exp6            rules 68, 69, 70, 71, 72
	Exp7            rules 73, 74, 75
	Exp8            rules 76, 77, 78, 79, 80, 81, 82, 83, 84

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'proc'         shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 10

	Program        goto state 3
	TopDecl        goto state 4
	ListTopDecl    goto state 5

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'*='           reduce using rule 1
	'+'            reduce using rule 1
	'+='           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'-='           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'else'         reduce using rule 1
	'in'           reduce using rule 1
	'then'         reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 4

	ListTopDecl -> TopDecl . ListTopDecl                (rule 11)

	'proc'         shift, and enter state 6
	'var'          shift, and enter state 7
	%eof           reduce using rule 10

	TopDecl        goto state 4
	ListTopDecl    goto state 10

State 5

	Program -> ListTopDecl .                            (rule 6)

	%eof           reduce using rule 6


State 6

	TopDecl -> 'proc' . Ident '(' ListParam ')' ':' Type Block    (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 9

State 7

	TopDecl -> 'var' . Ident ':' Type ';'               (rule 7)
	TopDecl -> 'var' . Ident ':' Type '=' Exp ';'       (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 8

State 8

	TopDecl -> 'var' Ident . ':' Type ';'               (rule 7)
	TopDecl -> 'var' Ident . ':' Type '=' Exp ';'       (rule 8)

	':'            shift, and enter state 12


State 9

	TopDecl -> 'proc' Ident . '(' ListParam ')' ':' Type Block    (rule 9)

	'('            shift, and enter state 11


State 10

	ListTopDecl -> TopDecl ListTopDecl .                (rule 11)

	%eof           reduce using rule 11


State 11

	TopDecl -> 'proc' Ident '(' . ListParam ')' ':' Type Block    (rule 9)

	')'            reduce using rule 13
	'ref'          shift, and enter state 25
	L_Ident        reduce using rule 16

	Param          goto state 22
	ListParam      goto state 23
	Intent         goto state 24

State 12

	TopDecl -> 'var' Ident ':' . Type ';'               (rule 7)
	TopDecl -> 'var' Ident ':' . Type '=' Exp ';'       (rule 8)

	'['            shift, and enter state 14
	'bool'         shift, and enter state 15
	'c_ptr'        shift, and enter state 16
	'char'         shift, and enter state 17
	'int'          shift, and enter state 18
	'real'         shift, and enter state 19
	'string'       shift, and enter state 20
	'void'         shift, and enter state 21

	Type           goto state 13

State 13

	TopDecl -> 'var' Ident ':' Type . ';'               (rule 7)
	TopDecl -> 'var' Ident ':' Type . '=' Exp ';'       (rule 8)

	';'            shift, and enter state 32
	'='            shift, and enter state 33


State 14

	Type -> '[' . Integer '..' Integer ']' Type         (rule 24)

	L_integ        shift, and enter state 31

	Integer        goto state 30

State 15

	Type -> 'bool' .                                    (rule 19)

	')'            reduce using rule 19
	','            reduce using rule 19
	';'            reduce using rule 19
	'='            reduce using rule 19
	'{'            reduce using rule 19


State 16

	Type -> 'c_ptr' . '(' Type ')'                      (rule 25)

	'('            shift, and enter state 29


State 17

	Type -> 'char' .                                    (rule 21)

	')'            reduce using rule 21
	','            reduce using rule 21
	';'            reduce using rule 21
	'='            reduce using rule 21
	'{'            reduce using rule 21


State 18

	Type -> 'int' .                                     (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	';'            reduce using rule 18
	'='            reduce using rule 18
	'{'            reduce using rule 18


State 19

	Type -> 'real' .                                    (rule 20)

	')'            reduce using rule 20
	','            reduce using rule 20
	';'            reduce using rule 20
	'='            reduce using rule 20
	'{'            reduce using rule 20


State 20

	Type -> 'string' .                                  (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22
	';'            reduce using rule 22
	'='            reduce using rule 22
	'{'            reduce using rule 22


State 21

	Type -> 'void' .                                    (rule 23)

	')'            reduce using rule 23
	','            reduce using rule 23
	';'            reduce using rule 23
	'='            reduce using rule 23
	'{'            reduce using rule 23


State 22

	ListParam -> Param .                                (rule 14)
	ListParam -> Param . ',' ListParam                  (rule 15)

	')'            reduce using rule 14
	','            shift, and enter state 28


State 23

	TopDecl -> 'proc' Ident '(' ListParam . ')' ':' Type Block    (rule 9)

	')'            shift, and enter state 27


State 24

	Param -> Intent . Ident ':' Type                    (rule 12)

	L_Ident        shift, and enter state 2

	Ident          goto state 26

State 25

	Intent -> 'ref' .                                   (rule 17)

	L_Ident        reduce using rule 17


State 26

	Param -> Intent Ident . ':' Type                    (rule 12)

	':'            shift, and enter state 64


State 27

	TopDecl -> 'proc' Ident '(' ListParam ')' . ':' Type Block    (rule 9)

	':'            shift, and enter state 63


State 28

	ListParam -> Param ',' . ListParam                  (rule 15)

	')'            reduce using rule 13
	'ref'          shift, and enter state 25
	L_Ident        reduce using rule 16

	Param          goto state 22
	ListParam      goto state 62
	Intent         goto state 24

State 29

	Type -> 'c_ptr' '(' . Type ')'                      (rule 25)

	'['            shift, and enter state 14
	'bool'         shift, and enter state 15
	'c_ptr'        shift, and enter state 16
	'char'         shift, and enter state 17
	'int'          shift, and enter state 18
	'real'         shift, and enter state 19
	'string'       shift, and enter state 20
	'void'         shift, and enter state 21

	Type           goto state 61

State 30

	Type -> '[' Integer . '..' Integer ']' Type         (rule 24)

	'..'           shift, and enter state 60


State 31

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	'&&'           reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'*='           reduce using rule 4
	'+'            reduce using rule 4
	'+='           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'-='           reduce using rule 4
	'..'           reduce using rule 4
	'/'            reduce using rule 4
	';'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'='            reduce using rule 4
	'=='           reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'['            reduce using rule 4
	']'            reduce using rule 4
	'else'         reduce using rule 4
	'then'         reduce using rule 4
	'{'            reduce using rule 4
	'||'           reduce using rule 4


State 32

	TopDecl -> 'var' Ident ':' Type ';' .               (rule 7)

	'!'            reduce using rule 7
	'('            reduce using rule 7
	'*'            reduce using rule 7
	'-'            reduce using rule 7
	'['            reduce using rule 7
	'break'        reduce using rule 7
	'c_ptrTo'      reduce using rule 7
	'continue'     reduce using rule 7
	'do'           reduce using rule 7
	'false'        reduce using rule 7
	'for'          reduce using rule 7
	'if'           reduce using rule 7
	'proc'         reduce using rule 7
	'return'       reduce using rule 7
	'true'         reduce using rule 7
	'var'          reduce using rule 7
	'while'        reduce using rule 7
	'{'            reduce using rule 7
	'}'            reduce using rule 7
	L_Ident        reduce using rule 7
	L_charac       reduce using rule 7
	L_doubl        reduce using rule 7
	L_integ        reduce using rule 7
	L_quoted       reduce using rule 7
	%eof           reduce using rule 7


State 33

	TopDecl -> 'var' Ident ':' Type '=' . Exp ';'       (rule 8)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'if'           shift, and enter state 55
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp            goto state 39
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	Exp8           goto state 47

State 34

	Exp7 -> Ident . '(' ListExp ')'                     (rule 74)
	Exp8 -> Ident .                                     (rule 76)

	'!='           reduce using rule 76
	'&&'           reduce using rule 76
	'('            shift, and enter state 91
	')'            reduce using rule 76
	'*'            reduce using rule 76
	'*='           reduce using rule 76
	'+'            reduce using rule 76
	'+='           reduce using rule 76
	','            reduce using rule 76
	'-'            reduce using rule 76
	'-='           reduce using rule 76
	'..'           reduce using rule 76
	'/'            reduce using rule 76
	';'            reduce using rule 76
	'<'            reduce using rule 76
	'<='           reduce using rule 76
	'='            reduce using rule 76
	'=='           reduce using rule 76
	'>'            reduce using rule 76
	'>='           reduce using rule 76
	'['            reduce using rule 76
	']'            reduce using rule 76
	'else'         reduce using rule 76
	'then'         reduce using rule 76
	'{'            reduce using rule 76
	'||'           reduce using rule 76


State 35

	Exp8 -> Char .                                      (rule 79)

	'!='           reduce using rule 79
	'&&'           reduce using rule 79
	')'            reduce using rule 79
	'*'            reduce using rule 79
	'*='           reduce using rule 79
	'+'            reduce using rule 79
	'+='           reduce using rule 79
	','            reduce using rule 79
	'-'            reduce using rule 79
	'-='           reduce using rule 79
	'..'           reduce using rule 79
	'/'            reduce using rule 79
	';'            reduce using rule 79
	'<'            reduce using rule 79
	'<='           reduce using rule 79
	'='            reduce using rule 79
	'=='           reduce using rule 79
	'>'            reduce using rule 79
	'>='           reduce using rule 79
	'['            reduce using rule 79
	']'            reduce using rule 79
	'else'         reduce using rule 79
	'then'         reduce using rule 79
	'{'            reduce using rule 79
	'||'           reduce using rule 79


State 36

	Exp8 -> Double .                                    (rule 78)

	'!='           reduce using rule 78
	'&&'           reduce using rule 78
	')'            reduce using rule 78
	'*'            reduce using rule 78
	'*='           reduce using rule 78
	'+'            reduce using rule 78
	'+='           reduce using rule 78
	','            reduce using rule 78
	'-'            reduce using rule 78
	'-='           reduce using rule 78
	'..'           reduce using rule 78
	'/'            reduce using rule 78
	';'            reduce using rule 78
	'<'            reduce using rule 78
	'<='           reduce using rule 78
	'='            reduce using rule 78
	'=='           reduce using rule 78
	'>'            reduce using rule 78
	'>='           reduce using rule 78
	'['            reduce using rule 78
	']'            reduce using rule 78
	'else'         reduce using rule 78
	'then'         reduce using rule 78
	'{'            reduce using rule 78
	'||'           reduce using rule 78


State 37

	Exp8 -> Integer .                                   (rule 77)

	'!='           reduce using rule 77
	'&&'           reduce using rule 77
	')'            reduce using rule 77
	'*'            reduce using rule 77
	'*='           reduce using rule 77
	'+'            reduce using rule 77
	'+='           reduce using rule 77
	','            reduce using rule 77
	'-'            reduce using rule 77
	'-='           reduce using rule 77
	'..'           reduce using rule 77
	'/'            reduce using rule 77
	';'            reduce using rule 77
	'<'            reduce using rule 77
	'<='           reduce using rule 77
	'='            reduce using rule 77
	'=='           reduce using rule 77
	'>'            reduce using rule 77
	'>='           reduce using rule 77
	'['            reduce using rule 77
	']'            reduce using rule 77
	'else'         reduce using rule 77
	'then'         reduce using rule 77
	'{'            reduce using rule 77
	'||'           reduce using rule 77


State 38

	Exp8 -> String .                                    (rule 80)

	'!='           reduce using rule 80
	'&&'           reduce using rule 80
	')'            reduce using rule 80
	'*'            reduce using rule 80
	'*='           reduce using rule 80
	'+'            reduce using rule 80
	'+='           reduce using rule 80
	','            reduce using rule 80
	'-'            reduce using rule 80
	'-='           reduce using rule 80
	'..'           reduce using rule 80
	'/'            reduce using rule 80
	';'            reduce using rule 80
	'<'            reduce using rule 80
	'<='           reduce using rule 80
	'='            reduce using rule 80
	'=='           reduce using rule 80
	'>'            reduce using rule 80
	'>='           reduce using rule 80
	'['            reduce using rule 80
	']'            reduce using rule 80
	'else'         reduce using rule 80
	'then'         reduce using rule 80
	'{'            reduce using rule 80
	'||'           reduce using rule 80


State 39

	TopDecl -> 'var' Ident ':' Type '=' Exp . ';'       (rule 8)

	';'            shift, and enter state 90


State 40

	Exp -> Exp1 .                                       (rule 50)
	Exp1 -> Exp1 . '||' Exp2                            (rule 51)

	')'            reduce using rule 50
	'*='           reduce using rule 50
	'+='           reduce using rule 50
	','            reduce using rule 50
	'-='           reduce using rule 50
	'..'           reduce using rule 50
	';'            reduce using rule 50
	'='            reduce using rule 50
	']'            reduce using rule 50
	'else'         reduce using rule 50
	'then'         reduce using rule 50
	'{'            reduce using rule 50
	'||'           shift, and enter state 89


State 41

	Exp1 -> Exp2 .                                      (rule 52)
	Exp2 -> Exp2 . '&&' Exp3                            (rule 53)

	'&&'           shift, and enter state 88
	')'            reduce using rule 52
	'*='           reduce using rule 52
	'+='           reduce using rule 52
	','            reduce using rule 52
	'-='           reduce using rule 52
	'..'           reduce using rule 52
	';'            reduce using rule 52
	'='            reduce using rule 52
	']'            reduce using rule 52
	'else'         reduce using rule 52
	'then'         reduce using rule 52
	'{'            reduce using rule 52
	'||'           reduce using rule 52


State 42

	Exp2 -> Exp3 .                                      (rule 54)

	'&&'           reduce using rule 54
	')'            reduce using rule 54
	'*='           reduce using rule 54
	'+='           reduce using rule 54
	','            reduce using rule 54
	'-='           reduce using rule 54
	'..'           reduce using rule 54
	';'            reduce using rule 54
	'='            reduce using rule 54
	']'            reduce using rule 54
	'else'         reduce using rule 54
	'then'         reduce using rule 54
	'{'            reduce using rule 54
	'||'           reduce using rule 54


State 43

	Exp3 -> Exp4 . '==' Exp4                            (rule 55)
	Exp3 -> Exp4 . '!=' Exp4                            (rule 56)
	Exp3 -> Exp4 . '<' Exp4                             (rule 57)
	Exp3 -> Exp4 . '<=' Exp4                            (rule 58)
	Exp3 -> Exp4 . '>' Exp4                             (rule 59)
	Exp3 -> Exp4 . '>=' Exp4                            (rule 60)
	Exp3 -> Exp4 .                                      (rule 61)
	Exp4 -> Exp4 . '+' Exp5                             (rule 62)
	Exp4 -> Exp4 . '-' Exp5                             (rule 63)

	'!='           shift, and enter state 80
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*='           reduce using rule 61
	'+'            shift, and enter state 81
	'+='           reduce using rule 61
	','            reduce using rule 61
	'-'            shift, and enter state 82
	'-='           reduce using rule 61
	'..'           reduce using rule 61
	';'            reduce using rule 61
	'<'            shift, and enter state 83
	'<='           shift, and enter state 84
	'='            reduce using rule 61
	'=='           shift, and enter state 85
	'>'            shift, and enter state 86
	'>='           shift, and enter state 87
	']'            reduce using rule 61
	'else'         reduce using rule 61
	'then'         reduce using rule 61
	'{'            reduce using rule 61
	'||'           reduce using rule 61


State 44

	Exp4 -> Exp5 .                                      (rule 64)
	Exp5 -> Exp5 . '*' Exp6                             (rule 65)
	Exp5 -> Exp5 . '/' Exp6                             (rule 66)

	'!='           reduce using rule 64
	'&&'           reduce using rule 64
	')'            reduce using rule 64
	'*'            shift, and enter state 78
	'*='           reduce using rule 64
	'+'            reduce using rule 64
	'+='           reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'-='           reduce using rule 64
	'..'           reduce using rule 64
	'/'            shift, and enter state 79
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'='            reduce using rule 64
	'=='           reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	']'            reduce using rule 64
	'else'         reduce using rule 64
	'then'         reduce using rule 64
	'{'            reduce using rule 64
	'||'           reduce using rule 64


State 45

	Exp5 -> Exp6 .                                      (rule 67)

	'!='           reduce using rule 67
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'*='           reduce using rule 67
	'+'            reduce using rule 67
	'+='           reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'-='           reduce using rule 67
	'..'           reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'='            reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	']'            reduce using rule 67
	'else'         reduce using rule 67
	'then'         reduce using rule 67
	'{'            reduce using rule 67
	'||'           reduce using rule 67


State 46

	Exp6 -> Exp7 .                                      (rule 72)
	Exp7 -> Exp7 . '[' Exp ']'                          (rule 73)

	'!='           reduce using rule 72
	'&&'           reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72
	'*='           reduce using rule 72
	'+'            reduce using rule 72
	'+='           reduce using rule 72
	','            reduce using rule 72
	'-'            reduce using rule 72
	'-='           reduce using rule 72
	'..'           reduce using rule 72
	'/'            reduce using rule 72
	';'            reduce using rule 72
	'<'            reduce using rule 72
	'<='           reduce using rule 72
	'='            reduce using rule 72
	'=='           reduce using rule 72
	'>'            reduce using rule 72
	'>='           reduce using rule 72
	'['            shift, and enter state 77
	']'            reduce using rule 72
	'else'         reduce using rule 72
	'then'         reduce using rule 72
	'{'            reduce using rule 72
	'||'           reduce using rule 72


State 47

	Exp7 -> Exp8 .                                      (rule 75)

	'!='           reduce using rule 75
	'&&'           reduce using rule 75
	')'            reduce using rule 75
	'*'            reduce using rule 75
	'*='           reduce using rule 75
	'+'            reduce using rule 75
	'+='           reduce using rule 75
	','            reduce using rule 75
	'-'            reduce using rule 75
	'-='           reduce using rule 75
	'..'           reduce using rule 75
	'/'            reduce using rule 75
	';'            reduce using rule 75
	'<'            reduce using rule 75
	'<='           reduce using rule 75
	'='            reduce using rule 75
	'=='           reduce using rule 75
	'>'            reduce using rule 75
	'>='           reduce using rule 75
	'['            reduce using rule 75
	']'            reduce using rule 75
	'else'         reduce using rule 75
	'then'         reduce using rule 75
	'{'            reduce using rule 75
	'||'           reduce using rule 75


State 48

	Exp6 -> '!' . Exp6                                  (rule 69)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp6           goto state 76
	Exp7           goto state 46
	Exp8           goto state 47

State 49

	Exp8 -> '(' . Exp ')'                               (rule 84)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'if'           shift, and enter state 55
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp            goto state 75
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	Exp8           goto state 47

State 50

	Exp6 -> '*' . Exp6                                  (rule 70)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp6           goto state 74
	Exp7           goto state 46
	Exp8           goto state 47

State 51

	Exp6 -> '-' . Exp6                                  (rule 68)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	Exp6           goto state 73
	Exp7           goto state 46
	Exp8           goto state 47

State 52

	Exp8 -> '[' . ListExp ']'                           (rule 83)

	'!'            shift, and enter state 48
	'('            shift, and enter state 49
	'*'            shift, and enter state 50
	'-'            shift, and enter state 51
	'['            shift, and enter state 52
	']'            reduce using rule 43
	'c_ptrTo'      shift, and enter state 53
	'false'        shift, and enter state 54
	'if'           shift, and enter state 55
	'true'         shift, and enter state 56
	L_Ident        shift, and enter state 2
	L_charac       shift, and enter state 57
	L_doubl        shift, and enter state 58
	L_integ        shift, and enter state 31
	L_quoted       shift, and enter state 59

	Ident          goto state 34
	Char           goto state 35
	Double         goto state 36
	Integer        goto state 37
	String         goto state 38
	ListExp        goto state 71
	Exp            goto state 72
	Exp1           goto state 40
	Exp2           goto state 41
	Exp3           goto state 42
	Exp4           goto state 43
	Exp5           goto state 44
	Exp6           goto state 45
	Exp7           goto state 46
	Exp8           goto state 47

State 53

	Exp6 -> 'c_ptrTo' . '(' Exp ')'                     (rule 71)

	'('            shift, and enter state 70


State 54

	Exp8 -> 'false' .                                   (rule 82)

	'!='           reduce using rule 82
	'&&'           reduce using rule 82
	')'            reduce using rule 82
	'*'            reduce using rule 82
	'*='           reduce using rule 82
	'+'            reduce using rule 82
	'+='           reduce using rule 82
	','            reduce using rule 82
	'-'            reduce using rule 82
	'-='           reduce using rule 82
	'..'           reduce using rule 82
	'/'            reduce using rule 82
	';'            reduce using rule 82
	'<'            reduce using rule 82
	'<='           reduce using rule 82
	'='            reduce using rule 82
	'=='           reduce using rule 82
	'>'            reduce using rule 82
	'>='           reduce using rule 82
	'['            reduce using rule 82
	']'            reduce using rule 82
	'else'         reduce using rule 82
	'then'         reduce using rule 82
	'{'            reduce using rule 82
	'||'           reduce using rule 82


State 55

	Exp -> 'if' . Exp 'then' Exp 'else' Exp             (rule 49)
